kubernetes/deploy/nodered/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: node-red
      release: node-red
  template:
    metadata:
      labels:
        app: node-red
        release: node-red
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: TZ
          value: UTC
        - name: FLOWS
          value: flows.json
        - name: NODE_OPTIONS
        - name: NODE_RED_ENABLE_PROJECTS
        - name: NODE_RED_ENABLE_SAFE_MODE
        image: nodered/node-red:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 1880
          timeoutSeconds: 1
        name: node-red
        ports:
        - containerPort: 1880
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 1880
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 1880
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /data
          name: config
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nodered-config
